Footer completed with responsiveness

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,11 @@ body {
 a {
   text-decoration: none;
 }
+
+.logo h1 {
+  font-size: 42px;
+  color: #1b9bff;
+  font-weight: 700;
+  margin-bottom: 0;
+  font-family: "MonteCarlo", cursive;
+}
