Footer Color changed & links updated

--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -2,10 +2,11 @@
   background-color: black;
 
   .logo {
-    border-bottom: 3px solid #ffffff;
+    border-left: 3px solid #1b9bff;
     h1 {
+      margin-left: 10px;
       padding-left: 5px;
-      color: white;
+      color: #1b9bff;
     }
   }
   .social1,
