--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -58,3 +58,11 @@
     color: #1b9bff;
   }
 }
+
+@media only screen and (max-width: 450px) {
+  .header-main {
+    h5 {
+      font-size: 12px;
+    }
+  }
+}
