--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -53,3 +53,41 @@
   }
 }
 // SERVICES SECTION ENDS HERE
+// COUNT SECTION
+.counts {
+  background-color: #1b9bff;
+
+  .icon {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #ccff01;
+  }
+  h2 {
+    font-size: 42px;
+    line-height: 52px;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+    margin-bottom: 20px;
+  }
+  h5 {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
+    text-align: center;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    padding-left: 10px;
+    cursor: pointer;
+    border-left: 5px solid #ffffff;
+    
+    &:hover {
+      color: #ccff01;
+      border-left: 5px solid #ccff01;
+    }
+  }
+}
+// COUNT SECTION ENDS HERE
