--- a/src/App.scss
+++ b/src/App.scss
@@ -47,14 +47,14 @@ button {
   font-weight: 700;
   padding: 7px 40px;
   border-radius: 25px;
-  background: #51b4ff;
-  border: 3px solid #51b4ff;
+  background: #1b9bff;
+  border: 3px solid #1b9bff;
   transition: all 0.3s;
 }
 
 button:hover {
   transform: scale(1.08);
-  box-shadow: inset 0 0 10px 0.5px #51b4ff, 0 0 30px #76c4ff;
+  box-shadow: inset 0 0 10px 0.5px #1b9bff, 0 0 30px #1b9bff;
 }
 
 .button2 {
@@ -64,13 +64,13 @@ button:hover {
   padding: 5px 30px;
   border-radius: 25px;
   background: transparent;
-  border: 2px solid #51b4ff;
+  border: 2px solid #1b9bff;
   transition: all 0.3s;
   text-transform: uppercase;
 }
 
 .button2:hover {
-  background: #51b4ff;
+  background: #1b9bff;
   transform: scale(1.08);
-  box-shadow: inset 0 0 10px 0.5px #51b4ff, 0 0 30px #76c4ff;
+  box-shadow: inset 0 0 10px 0.5px #1b9bff, 0 0 30px #1b9bff;
 }
