--- a/src/App.scss
+++ b/src/App.scss
@@ -46,15 +46,31 @@ button {
   font-size: 15px;
   font-weight: 700;
   padding: 7px 40px;
-  border-radius: 25px;
-  background: #1b9bff;
-  border: 3px solid #1b9bff;
-  transition: all 0.3s;
+  background-image: linear-gradient(
+    80deg,
+    rgba(0, 21, 255, 0.991),
+    rgba(57, 159, 255, 0.991)
+  );
+
+  border: 1px solid;
+  border-image: linear-gradient(
+    80deg,
+    rgba(0, 21, 255, 0.991),
+    rgba(57, 159, 255, 0.991)
+  );
+  border-radius: 55px;
+  transition: all 0.4s;
 }
 
 button:hover {
   transform: scale(1.08);
-  box-shadow: inset 0 0 10px 0.5px #1b9bff, 0 0 30px #1b9bff;
+  // background-image: linear-gradient(
+  //   80deg,
+  //   rgba(57, 159, 255, 0.991),
+  //   rgba(0, 21, 255, 0.991)
+  // );
+  box-shadow: inset 0 0 10px 0.5px rgba(0, 21, 255, 0.991),
+    0 0 30px rgba(57, 159, 255, 0.991);
 }
 
 .button2 {
