--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -3,7 +3,12 @@
   width: 100%;
   height: auto;
   color: rgb(255, 255, 255);
-  background-color: #1b9bff;
+  // background-color: #1b9bff;
+  background-image: linear-gradient(
+    90deg,
+    rgba(0, 21, 255, 0.991),
+    rgba(57, 159, 255, 0.991)
+  );
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
 
