CountUp section responsiveness issue fixed

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -14,7 +14,11 @@
     border-top-left-radius: 30%;
     border-bottom-right-radius: 30%;
     background: rgb(0, 174, 255);
-    background-image: linear-gradient(180deg, rgba(0, 21, 255, 0.991), rgba(57, 159, 255, 0.991));
+    background-image: linear-gradient(
+      180deg,
+      rgba(0, 21, 255, 0.991),
+      rgba(57, 159, 255, 0.991)
+    );
   }
 
   p {
@@ -35,8 +39,11 @@
     padding: 0px 40px;
     border-top-right-radius: 25%;
     border-top-left-radius: 50%;
-    background-image: linear-gradient(180deg, rgba(57, 159, 255, 0.991), rgba(0, 21, 255, 0.991));
-    // background: rgba(57, 159, 255, 0.991);
+    background-image: linear-gradient(
+      180deg,
+      rgba(57, 159, 255, 0.991),
+      rgba(0, 21, 255, 0.991)
+    );
     transition: all 0.4s ease-in-out;
     h2 {
       font-size: 24px;
