--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -64,7 +64,7 @@
     color: #ccff01;
   }
   h2 {
-    font-size: 42px;
+    font-size: 38px;
     line-height: 52px;
     font-weight: 600;
     text-align: center;
@@ -72,7 +72,7 @@
     margin-bottom: 20px;
   }
   h5 {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
     font-weight: 600;
     text-align: center;
@@ -83,10 +83,29 @@
     padding-left: 10px;
     cursor: pointer;
     border-left: 5px solid #ffffff;
-    
+
     &:hover {
       color: #ccff01;
       border-left: 5px solid #ccff01;
+    }
+  }
+  @media only screen and (max-width: 1020px) {
+    h2 {
+      font-size: 28px;
+      line-height: 38px;
+    }
+    h5 {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+  @media only screen and (max-width: 450px) {
+    h2 {
+      font-size: 38px;
+    }
+    h5 {
+      font-size: 16px;
+      margin-bottom: 50px;
     }
   }
 }
