--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -53,6 +53,36 @@
   }
 }
 // SERVICES SECTION ENDS HERE
+
+// PROJECTS SECTION
+.projects {
+  .heading span {
+    margin: 0;
+    padding-bottom: 5px;
+    font-size: 42px;
+    line-height: 58px;
+    font-weight: 700;
+  }
+  .sub-heading {
+    font-size: 16px;
+    color: #454545;
+    font-weight: 400;
+    text-align: center;
+    line-height: 26px;
+  }
+  @media only screen and (max-width: 450px) {
+    .heading span {
+      font-size: 28px;
+      line-height: 38px;
+    }
+    .sub-heading {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+}
+// PROJECTS SECTION ENDS HERE
+
 // COUNT SECTION
 .counts {
   background-color: #1b9bff;
@@ -110,3 +140,49 @@
   }
 }
 // COUNT SECTION ENDS HERE
+
+// MARQUEE SECTION
+.marquee {
+  background-color: rgb(17, 0, 13);
+  box-shadow: 0px 0px 20px rgb(100, 100, 100);
+
+  .overlay {
+    background-color: none;
+  }
+  .logo1 {
+    width: 100px;
+    height: 60px;
+    margin: 0px 50px 0px 100px;
+  }
+  .logo2,
+  .logo6 {
+    width: 80px;
+    height: 60px;
+    margin: 0px 50px;
+  }
+  .logo3 {
+    width: 150px;
+    height: 60px;
+    margin: 0px 50px;
+  }
+  .logo4,
+  .logo5 {
+    width: 100px;
+    height: 60px;
+    margin: 0px 50px;
+    border-radius: 10px;
+  }
+  .logo4 {
+    padding: 10px;
+    background-color: rgb(246, 239, 255);
+  }
+  .logo7 {
+    width: 150px;
+    height: 60px;
+    margin: 0px 100px 0px 50px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+  }
+}
+// MARQUEE SECTION ENDS HERE
