--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -22,6 +22,18 @@
     word-spacing: -2px;
     font-family: "Moulpali", cursive;
   }
+  @media only screen and (max-width: 450px) {
+    h1 {
+      font-size: 42px;
+    }
+    h4 {
+      font-size: 16px;
+      line-height: 32px;
+    }
+    h6 {
+      font-size: 14px;
+    }
+  }
 }
 // HERO SECTION ENDS HERE
 
