--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -6,66 +6,78 @@
   cursor: pointer;
   box-shadow: 5px 5px 30px rgb(200, 200, 200);
 
-  &:hover .details {
-    top: 0;
-    height: 100%;
-    // border-radius: 50px;
-    border-top-right-radius: 0%;
-    border-top-left-radius: 30%;
-    border-bottom-right-radius: 30%;
-    background: rgb(0, 174, 255);
-    background-image: linear-gradient(
-      180deg,
-      rgba(0, 21, 255, 0.991),
-      rgba(57, 159, 255, 0.991)
-    );
-  }
-
   p {
     font-size: 24px;
     color: white;
     font-weight: 700;
     padding: 10px 20px;
   }
-  .details {
-    height: 75%;
-    width: 100%;
-    top: 65%;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 40px;
-    border-top-right-radius: 25%;
-    border-top-left-radius: 50%;
+
+  &:hover .details {
+    top: 100%;
+  }
+}
+
+.details {
+  height: 75%;
+  width: 100%;
+  top: 65%;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 40px;
+  border-top-right-radius: 25%;
+  border-top-left-radius: 50%;
+  z-index: 9999 !important;
+  background-image: linear-gradient(
+    180deg,
+    rgba(57, 159, 255, 0.991),
+    rgba(0, 21, 255, 0.991)
+  );
+  transition: all 0.4s ease-in-out;
+  h2 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #ffffff;
+    text-align: center;
+  }
+  h5 {
+    font-size: 14px;
+    font-weight: 500;
+    color: #ebebeb;
+    line-height: 25px;
+    text-align: center;
+    padding-left: 8px;
+    border-left: 5px solid greenyellow;
+  }
+  h6 {
+    font-size: 14px;
+    font-weight: 500;
+    color: #d6d7d7;
+    line-height: 25px;
+    text-align: center;
+  }
+  .up {
+    top: 20px;
+    right: 20px;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  &:hover {
+    top: 0 !important;
+    height: 100% !important;
+    border-top-right-radius: 0% !important;
+    border-top-left-radius: 30% !important;
+    border-bottom-right-radius: 30% !important;
+    background: rgb(0, 174, 255) !important;
     background-image: linear-gradient(
       180deg,
-      rgba(57, 159, 255, 0.991),
-      rgba(0, 21, 255, 0.991)
-    );
-    transition: all 0.4s ease-in-out;
-    h2 {
-      font-size: 24px;
-      font-weight: 700;
-      color: #ffffff;
-      text-align: center;
-    }
-    h5 {
-      font-size: 14px;
-      font-weight: 500;
-      color: #ebebeb;
-      line-height: 25px;
-      text-align: center;
-      padding-left: 8px;
-      border-left: 5px solid greenyellow;
-    }
-    h6 {
-      font-size: 14px;
-      font-weight: 500;
-      color: #d6d7d7;
-      line-height: 25px;
-      text-align: center;
-    }
+      rgba(0, 21, 255, 0.991),
+      rgba(57, 159, 255, 0.991)
+    ) !important;
   }
 }
