UI Details updated

--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -98,6 +98,9 @@
       font-size: 14px;
       line-height: 18px;
     }
+    .note {
+      font-size: 12px;
+    }
   }
 }
 // PROJECTS SECTION ENDS HERE
