Buttons UI updated

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@ a {
   font-family: "MonteCarlo", cursive;
 }
 
-button {
+.button {
   color: #fff;
   font-size: 15px;
   font-weight: 700;
@@ -53,6 +53,7 @@ button {
   transition: all 0.4s;
 
   &:hover {
+    color: #fff;
     transform: scale(1.08);
     box-shadow: inset 0 0 10px 0.5px rgba(0, 21, 255, 0.991),
       0 0 30px rgba(120, 190, 255, 0.991);
@@ -60,27 +61,21 @@ button {
 }
 
 .button2 {
-  color: #fff;
   font-size: 14px;
   font-weight: 600;
   padding: 5px 20px;
   border-radius: 25px;
-  background: transparent;
-  border: 2px solid #1b9bff;
-  transition: all 0.3s;
   text-transform: uppercase;
+  color: #1b9bff;
+  background-color: white;
+  transition: all 0.3s;
 
   &:hover {
-    background: #1b9bff;
+    color: white;
+    border: 2px solid white;
+    background: transparent;
     transform: scale(1.08);
-    box-shadow: inset 0 0 10px 0.5px #1b9bff, 0 0 30px #1b9bff;
   }
-}
-
-.button2:hover {
-  background: #1b9bff;
-  transform: scale(1.08);
-  box-shadow: inset 0 0 10px 0.5px #1b9bff, 0 0 30px #1b9bff;
 }
 
 .button3 {
