Text animation added

--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -11,7 +11,7 @@
     line-height: 28px;
     color: #444;
     font-weight: 700;
-    font-family: "Moulpali", cursive;
+    font-family: "Moulpali", cursive !important;
 
     .icon {
       font-size: 16px;
