Images updated. UI changed for projects.

--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -70,6 +70,7 @@
 
 // PROJECTS SECTION
 .projects {
+  background-color: black;
   .heading span {
     margin: 0;
     padding-bottom: 5px;
@@ -167,7 +168,7 @@
 
 // MARQUEE SECTION
 .marquee {
-  background-color: rgb(17, 0, 13);
+  background-color: #1b9bff;
   box-shadow: 0px 0px 20px rgb(100, 100, 100);
 
   .overlay {
