--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -4,11 +4,17 @@
   border-radius: 5px;
   overflow: hidden;
   cursor: pointer;
-  box-shadow: 5px 5px 30px rgb(200, 200, 200);
+  box-shadow: 5px 5px 40px 30px rgb(19, 19, 19);
 
   .website {
     width: 100%;
     height: 100%;
+    object-fit: cover;
+    object-position: top center;
+    transition: all 5s ease-in-out;
+    &:hover {
+      object-position: bottom center;
+    }
   }
   p {
     font-size: 24px;
