--- a/src/Pages/Home/Style.scss
+++ b/src/Pages/Home/Style.scss
@@ -204,6 +204,13 @@
   .logo7 {
     width: 250px;
     height: 80px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+  }
+  .logo8 {
+    width: 250px;
+    height: 80px;
     margin: 0px 100px 0px 50px;
     padding: 20px;
     background-color: white;
