--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-size: cover;
     object-position: top center;
     transition: all 5s ease-in-out;
     &:hover {
